src/c/dynamics.h

/**
 * @brief A linear-elastic-isotropic material.
 */
typedef struct
{
    /**
     * The material density.
    */
    double density;
    /**
     * The modulus of elasticity.
    */
    double modulus;
    /**
     * The Poisson's ratio.
    */
    double poissons_ratio;
} c_material;
/**
 * @brief A structural node with position and degrees of freedom.
 */
typedef struct
{
    /**
     * The global index of the node.
    */
    int index;
    /**
     * The number of degrees of freedom associated with the node.
    */
    int dof;
    /**
     * The x-coordinate.
    */
    double x;
    /**
     * The y-coordinate.
    */
    double y;
    /**
     * The z-coordinate.
    */
    double z;
} c_node;
/**
 * @brief A two-dimensional Bernoulli-Euler beam element.
 *
 * @image html beam_coordinate_system.svg "Beam element coordinate systems"
 */
typedef struct
{
    /**
     * The material.
    */
    c_material material;
    /**
     * The cross-sectional area.
    */
    double area;
    /**
     * The moment of inertia (second moment of area).
    */
    double moment_of_inertia;
    /**
     * The first node of the element (s = -1).
    */
    c_node node_1;
    /**
     * The second node of the element (s = 1).
    */
    c_node node_2;
} c_beam_element_2d;
/**
 * @brief A three-dimensional Bernoulli-Euler beam element.
 *
 * @image html beam_coordinate_system.svg "Beam element coordinate systems"
 */
typedef struct
{
    /**
     * The material.
    */
    c_material material;
    /**
     * The cross-sectional area.
    */
    double area;
    /**
     * The moment of inertia about the element x-axis (torsional).
    */
    double Ixx;
    /**
     * The moment of inertia about the element y-axis.
    */
    double Iyy;
    /**
     * The moment of inertia about the element z-axis.
    */
    double Izz;
    /**
     * The cross-sectional product of inertia.
    */
    double Iyz;
    /**
     * The first node of the element (s = -1).
    */
    c_node node_1;
    /**
     * The second node of the element (s = 1).
    */
    c_node node_2;
    /**
     * A point, measured relative to node_1, that locates the direction of
     * the element z-axis.
    */
    double orientation_point[3];
} c_beam_element_3d;
/**
 * @}
 */

/**
 * @defgroup dynamics_structural Structural analysis and line elements
 * @{
 */
/**
 * Compute the length of a 2D beam element.
 * @param elem Beam element.
 * @return Element length.
 */
double c_beam_element_2d_length(const c_beam_element_2d *elem);
/**
 * Compute the 6-by-6 stiffness matrix of a 2D beam element.
 * @param elem Beam element.
 * @param rule Integration rule, or zero to use the default rule.
 * @param k Output stiffness matrix.
 * @param ldk Leading dimension of k.
 */
void c_beam_element_2d_stiffness_matrix(const c_beam_element_2d *elem,
    int rule, double *k, int ldk);
/**
 * Compute the 6-by-6 mass matrix of a 2D beam element.
 * @param elem Beam element.
 * @param rule Integration rule, or zero to use the default rule.
 * @param m Output mass matrix.
 * @param ldm Leading dimension of m.
 */
void c_beam_element_2d_mass_matrix(const c_beam_element_2d *elem, int rule,
    double *m, int ldm);
/**
 * Compute the 6-by-6 rotation matrix of a 2D beam element.
 * @param elem Beam element.
 * @param r Output rotation matrix.
 * @param ldr Leading dimension of r.
 */
void c_beam_element_2d_rotation_matrix(const c_beam_element_2d *elem,
    double *r, int ldr);
/**
 * Compute the strain in a 2D beam element at a natural coordinate.
 * @param elem Beam element.
 * @param displacement 6-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @param strain Output 2-element strain vector.
 */
void c_beam_element_2d_strain(const c_beam_element_2d *elem,
    const double displacement[6], double s, double strain[2]);
/**
 * Compute the stress in a 2D beam element at a natural coordinate.
 * @param elem Beam element.
 * @param displacement 6-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @param stress Output 2-element stress vector.
 */
void c_beam_element_2d_stress(const c_beam_element_2d *elem,
    const double displacement[6], double s, double stress[2]);
/**
 * Compute the local shear force in a 2D beam element at a natural coordinate.
 * @param elem Beam element.
 * @param displacement 6-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @return Local shear force.
 */
double c_beam_element_2d_shear_force(const c_beam_element_2d *elem,
    const double displacement[6], double s);
/**
 * Compute the local bending moment in a 2D beam element at a natural
 * coordinate.
 * @param elem Beam element.
 * @param displacement 6-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @return Local bending moment.
 */
double c_beam_element_2d_bending_moment(const c_beam_element_2d *elem,
    const double displacement[6], double s);
/**
 * Compute the equivalent nodal force vector for a distributed load on a 2D
 * beam element.
 * @param elem Beam element.
 * @param q 2-element distributed load vector, [qx, qy].
 * @param rule Integration rule, or zero to use the default rule.
 * @param f Output 6-element nodal force vector.
 */
void c_beam_element_2d_external_force_vector(const c_beam_element_2d *elem,
    const double q[2], int rule, double f[6]);
/**
 * Compute the length of a 3D beam element.
 * @param elem Beam element.
 * @return Element length.
 */
double c_beam_element_3d_length(const c_beam_element_3d *elem);
/**
 * Compute the 12-by-12 stiffness matrix of a 3D beam element.
 * @param elem Beam element.
 * @param rule Integration rule, or zero to use the default rule.
 * @param k Output stiffness matrix.
 * @param ldk Leading dimension of k.
 */
void c_beam_element_3d_stiffness_matrix(const c_beam_element_3d *elem,
    int rule, double *k, int ldk);
/**
 * Compute the 12-by-12 mass matrix of a 3D beam element.
 * @param elem Beam element.
 * @param rule Integration rule, or zero to use the default rule.
 * @param m Output mass matrix.
 * @param ldm Leading dimension of m.
 */
void c_beam_element_3d_mass_matrix(const c_beam_element_3d *elem, int rule,
    double *m, int ldm);
/**
 * Compute the 12-by-12 rotation matrix of a 3D beam element.
 * @param elem Beam element.
 * @param r Output rotation matrix.
 * @param ldr Leading dimension of r.
 */
void c_beam_element_3d_rotation_matrix(const c_beam_element_3d *elem,
    double *r, int ldr);
/**
 * Compute the strain in a 3D beam element at a natural coordinate.
 * @param elem Beam element.
 * @param displacement 12-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @param strain Output 4-element strain vector.
 */
void c_beam_element_3d_strain(const c_beam_element_3d *elem,
    const double displacement[12], double s, double strain[4]);
/**
 * Compute the stress in a 3D beam element at a natural coordinate.
 * @param elem Beam element.
 * @param displacement 12-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @param stress Output 4-element stress vector.
 */
void c_beam_element_3d_stress(const c_beam_element_3d *elem,
    const double displacement[12], double s, double stress[4]);
/**
 * Compute the local shear-force vector in a 3D beam element at a natural
 * coordinate. The output is ordered [y-axis, z-axis].
 * @param elem Beam element.
 * @param displacement 12-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @param force Output 2-element local shear-force vector.
 */
void c_beam_element_3d_shear_force(const c_beam_element_3d *elem,
    const double displacement[12], double s, double force[2]);
/**
 * Compute the local moment vector in a 3D beam element at a natural
 * coordinate. The output is ordered [torsional, y-axis, z-axis].
 * @param elem Beam element.
 * @param displacement 12-element element displacement vector.
 * @param s Natural coordinate in [-1, 1].
 * @param moment Output 3-element local moment vector.
 */
void c_beam_element_3d_bending_moment(const c_beam_element_3d *elem,
    const double displacement[12], double s, double moment[3]);
/**
 * Compute the equivalent nodal force vector for a distributed load on a 3D
 * beam element.
 * @param elem Beam element.
 * @param q 4-element distributed load vector, [qx, qy, qz, qtheta].
 * @param rule Integration rule, or zero to use the default rule.
 * @param f Output 12-element nodal force vector.
 */
void c_beam_element_3d_external_force_vector(const c_beam_element_3d *elem,
    const double q[4], int rule, double f[12]);
/**
 * Assemble a dense global stiffness matrix from 2D beam elements.
 * @param gdof Total number of global degrees of freedom.
 * @param n Element count.
 * @param elements Beam elements.
 * @param nn Node count.
 * @param nodes Global node list.
 * @param rule Integration rule, or zero to use the default rule.
 * @param k Output gdof-by-gdof stiffness matrix.
 * @param ldk Leading dimension of k.
 */
void c_assemble_static_system_beam_2d(int gdof, int n,
    const c_beam_element_2d *elements, int nn, const c_node *nodes, int rule,
    double *k, int ldk);